Cambiar el  texto del html para que coincida con lo que se aprende

--- a/Curso JavaScript/03_AsignacionValores/index.html
+++ b/Curso JavaScript/03_AsignacionValores/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Asignacion de valores
+    <h1>Asignación de valores númericos y operaciones</h1>
 </body>
 </html>
